fix: add missing padding

--- a/components/styles.sass
+++ b/components/styles.sass
@@ -17,13 +17,12 @@ $home-bg-img: url(/images/the-matrix.jpg)
   position: fixed
   width: 100vw
   background: unset !important
-  margin-top: 1rem
 
   .navbar-items
     background: unset !important
 
 .home-section
-  padding: 30vh 0
+  padding: 30vh 50px
   background: $navbar-bg-opacity
   min-height: 100%
   background: linear-gradient(0deg, $navbar-bg-opacity, $navbar-bg-opacity), $home-bg-img
